tests/type-check/good/letrec.arr
a = letrec b = 5: b end
b :: Number = a
