tests/type-check/bad/basic-check.arr
check:
  a :: Number = "hello"
  a + 6
end
